Correctly stretch the selector background

--- a/src/MapSelector.css
+++ b/src/MapSelector.css
@@ -1,3 +1,7 @@
+.MapSelector {
+  height: 100%;
+}
+
 .MapList {
   height: 100%;
   background-color: #282c34;
